[package]
name = "s2png"
version = "1.0.0"
authors = ["k0wax", "D. Bohdan <dbohdan@dbohdan.com>"]
edition = "2018"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/dbohdan/s2png"
homepage = "https://github.com/dbohdan/s2png"
description = "Store any data in PNG images"
keywords = ["png"]
categories = ["command-line-utilities"]

[dependencies]
exitcode = "1.1"
getopts = "0.2"
hex = "0.4"
image = { version = "0.25.1", features = ["png"] }

[dev-dependencies]
file_diff = "1.0.0"
regex = "1"
tempfile = "3.10"
rand = "0.8"
